Ported to 1.20.5